--- a/Client/Pages/TransactionsOverview.razor
+++ b/Client/Pages/TransactionsOverview.razor
@@ -51,7 +51,7 @@
 
             <div class="outerPageTitle" style="background-color:@catColor;border:1px solid @catOutlineColor;">
 
-                <div class="outerTitleBudgetAndDots" @onfocusout="@(()=>isOpetionsBtnClicked=false)">
+                <div class="outerTitleBudgetAndDots">
 
                     <h3 class="pageTitle">מבט על: "@subCategoryTitle"</h3>
                     @if (!typeByCat)
