--- a/Client/Pages/ProfilePage.razor.css
+++ b/Client/Pages/ProfilePage.razor.css
@@ -75,6 +75,34 @@
     justify-items: center;
 }
 
+.Editedtag {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-align: center;
+    border-radius: 0.25rem;
+    width: 5.5rem;
+    height: 2rem;
+    justify-items: center;
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    padding: 0 1.7vw;
+    align-items: center;
+}
+
+.outerEditTags {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
 .options {
     background: none;
     color: inherit;
@@ -398,7 +426,7 @@
     padding: 0.8vh 1vw;
     z-index: 2;
     position: absolute;
-    margin-top: 33%;
+    margin-top: 47%;
     box-shadow: 0px 31px 9px 0px rgba(0, 0, 0, 0.00), 0px 20px 8px 0px rgba(0, 0, 0, 0.02), 0px 11px 7px 0px rgba(0, 0, 0, 0.06), 0px 5px 5px 0px rgba(0, 0, 0, 0.10), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
@@ -708,4 +736,44 @@
 .outerEmojiAndBtn {
     display: flex;
     flex-direction: column;
+}
+
+.startDays {
+    display: flex;
+    flex-direction: column;
+    border-radius: 0.25rem;
+    background: #FFF;
+    justify-content: center;
+    width: 93%;
+    padding: 0.8vh 1vw;
+    z-index: 2;
+    position: absolute;
+    margin-top: 1%;
+    box-shadow: 0px 31px 9px 0px rgba(0, 0, 0, 0.00), 0px 20px 8px 0px rgba(0, 0, 0, 0.02), 0px 11px 7px 0px rgba(0, 0, 0, 0.06), 0px 5px 5px 0px rgba(0, 0, 0, 0.10), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+
+.dropDownOptionDaysBtn {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    width: 100%;
+    height: 50%;
+    padding: 0.5vh 0;
+}
+
+.outerDaysOptions {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.outerDays {
+    width: 7%;
+    display: flex;
+    justify-content: center;
 }
