--- a/Client/Components/AddTransactionComponent.razor
+++ b/Client/Components/AddTransactionComponent.razor
@@ -196,14 +196,14 @@
                                             <div class="innerTransOverlay">
                                                 <button class="modal-close-btn" @onclick="backToTrans"><img src="../css/images/back-repeated.svg" /></button>
                                                 <h4>הגדרת @newTransaction.transTitle כהוצאה חוזרת על עצמה</h4>
-                                                <div class="reText">במידה וההוצאה חוזרת בסכום שונה, יש להזין את הסכום הרצוי. בחודש בו אינה חוזרת, יש להזין 0.</div>
+                                                <div class="reText">במידה והפעולה חוזרת בסכום שונה, יש להזין את הסכום הרצוי. בחודש בו אינה חוזרת, יש להזין 0.</div>
                                                 <div class="outerMonths">
                                                     @if (resetMonthValues == false)
                                                     {
-                                                        @foreach (TransactionToAdd tToCheck in transactionsToAdd)
+@*                                                        @foreach (TransactionToAdd tToCheck in transactionsToAdd)
                                                         {
                                                             tToCheck.transValue = newTransaction.transValue;
-                                                        }
+                                                        }*@
                                                         @foreach (string month in months)
                                                         {
                                                             <div class="monthValueInput @thisMonthDivStyle">
@@ -310,15 +310,15 @@ resetMonthValues = !resetMonthValues">
                                             {
                                                 <button class="modal-close-btn" @onclick="backToTrans"><img src="../css/images/back-repeated.svg" /></button>
                                                 <h4>הגדרת @newTransaction.transTitle כהוצאה חוזרת על עצמה</h4>
-                                                <div class="reText">במידה וההוצאה חוזרת בסכום שונה, יש להזין את הסכום הרצוי. בחודש בו אינה חוזרת, יש להזין 0.</div>
+                                                <div class="reText">במידה והפעולה חוזרת בסכום שונה, יש להזין את הסכום הרצוי. בחודש בו אינה חוזרת, יש להזין 0.</div>
                                                 <div class="outerMonths">
                                                     @if (resetMonthValues == false)
                                                     {
                                                         isResetBtnClicked = false;
-                                                        @foreach (TransactionToAdd tToCheck in transactionsToAdd)
+@*                                                        @foreach (TransactionToAdd tToCheck in transactionsToAdd)
                                                         {
                                                             tToCheck.transValue = newTransaction.transValue;
-                                                        }
+                                                        }*@
 
                                                         @foreach (string month in months)
                                                         {
@@ -992,9 +992,12 @@ resetMonthValues = !resetMonthValues">
             if (repeatedTrans.transDate == date)
             {
                 repeatedTrans.transValue = double.Parse(newValue);
+              
+                Console.WriteLine("trans month- " + repeatedTrans.transDate + ", value- " + repeatedTrans.transValue);
             }
 
         }
+       
     }
 
 
